RESOLVED FIXED281679
[Navigation] Fix sandboxing tests in navigation-methods
https://bugs.webkit.org/show_bug.cgi?id=281679
Summary [Navigation] Fix sandboxing tests in navigation-methods
Rob Buis
Reported 2024-10-17 11:25:31 PDT
Fix sandboxing tests in navigation-methods.
Attachments
Rob Buis
Comment 1 2024-10-17 11:48:57 PDT
EWS
Comment 2 2024-10-18 01:26:18 PDT
Committed 285384@main (c38e8f3bcf8a): <https://commits.webkit.org/285384@main> Reviewed commits have been landed. Closing PR #35373 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-18 01:27:14 PDT
Note You need to log in before you can comment on or make changes to this bug.