[Navigation] Fix sandboxing tests in navigation-methods https://bugs.webkit.org/show_bug.cgi?id=281679

Reviewed by Alex Christensen.

Fix sandboxing tests in navigation-methods by checking whether the subframes are sandboxed and throwing an
exception if so [1].

[1] https://html.spec.whatwg.org/multipage/nav-history-apis.html#performing-a-navigation-api-traversal (Step 12.6)

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-methods/sandboxing-back-parent-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-methods/sandboxing-back-sibling-expected.txt:
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::performTraversal):

Canonical link: https://commits.webkit.org/285384@main